<resources>
    <!-- Main Strings -->
    <string name="app_name">OW Stat Tracker</string>
    <string name="author">Riley Evans</string>
    <string name="title_profile">Profile</string>
    <string name="title_new_match">New Match</string>
    <string name="title_tracker">Tracker</string>

    <!-- Technical / Warnings -->
    <string name="null_string">null</string>
    <string name="no_internet_warning">Please connect to the internet.</string>
    <string name="loading">…</string>

    <string name="background_hero_image">Background Hero Image</string>
    <string name="sr">SR</string>

    <!-- Profile Fragment Strings -->
    <string name="profile_title">%s\'s Profile</string>
    <string name="profile_title_s">%s\' Profile</string>

    <!-- New Match Fragment Strings-->
    <string name="eliminations">Eliminations</string>
    <string name="deaths">Deaths</string>
    <string name="damage">Damage</string>
    <string name="healing">Healing</string>
    <string name="length">Length (Min)</string>
    <string name="accuracy">Accuracy (%)</string>
    <string name="hero">Hero</string>
    <string name="map">Map</string>
    <string name="dash">-</string>
    <string name="winston">Winston</string>
    <string name="wreckingball">Wrecking Ball</string>
    <string name="zarya">Zarya</string>
    <string name="roadhog">Roadhog</string>
    <string name="reinhardt">Reinhardt</string>
    <string name="orisa">Orisa</string>
    <string name="dva">DVa</string>
    <string name="mcree">Mcree</string>
    <string name="junkrat">Junkrat</string>
    <string name="hanzo">Hanzo</string>
    <string name="genji">Genji</string>
    <string name="doomfist">Doomfist</string>
    <string name="symmetra">Symmetra</string>
    <string name="sombra">Sombra</string>
    <string name="soldier_76">Soldier: 76</string>
    <string name="reaper">Reaper</string>
    <string name="pharah">Pharah</string>
    <string name="widowmaker">Widowmaker</string>
    <string name="tracer">Tracer</string>
    <string name="ana">Ana</string>
    <string name="brigette">Brigette</string>
    <string name="lucio">Lúcio</string>
    <string name="mercy">Mercy</string>
    <string name="zenyatta">Zenyatta</string>
    <string name="torbjorn">Torbjörn</string>
    <string name="moira">Moira</string>
    <string name="mei">Mei</string>
    <string name="bastion">Bastion</string>

    <string name="tankCategory">TANK</string>
    <string name="damageCategory">DAMAGE</string>
    <string name="supportCategory">SUPPORT</string>

    <string name="hero_1">Hero 1</string>
    <string name="hero_2">Hero 2</string>
    <string name="hero_3">Hero 3</string>
    <string name="hero_4">Hero 4</string>
    <string name="hero_5">Hero 5</string>
    <string name="sample_text">sample text</string>
    <string name="submit_button">submit button</string>
    <string name="all">All</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="wr_percent">wr%</string>
    <string name="init_message">Enter your current SR</string>
    <string name="play_more_matches_to_display_graph">Play more matches to display graph</string>
    <string name="map_category_icon">Map Category Icon</string>
    <string name="back_button">Back Button</string>
    <string name="delete_match">Delete Match</string>
    <string name="date">Date</string>
    <string name="total_matches">Total Matches</string>
    <string name="career_high">Career High</string>
    <string name="average_heals_min">Average Heals/Min</string>
    <string name="average_k_d">Average K/D</string>
    <string name="average_dmg_min">Average DMG/Min</string>
    <string name="win_draw_loss">Win - Draw - Loss</string>
    <string name="perMin">/ minute</string>
    <string name="perDeath">/ death</string>
    <string name="perMinute">/ minute</string>
    <string name="perDeaths">/ death</string>
    <string name="dot">•</string>
    <string name="accuracyNoPercent">Accuracy</string>
    <string name="lengthNoMin">Length</string>

</resources>
