<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="-30dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="false"
        android:alpha="0.1"
        android:contentDescription="@string/background_hero_image"
        app:layout_constraintBottom_toBottomOf="@+id/mainGraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainGraph"
        app:srcCompat="@color/transparent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fadingEdge="horizontal"
        android:singleLine="true"
        android:text="@string/title_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/graphInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="72sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/graphInfoTail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/sr"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/graphInfo"
        app:layout_constraintStart_toEndOf="@+id/graphInfo" />

    <com.robinhood.spark.SparkView
        android:id="@+id/mainGraph"
        style="@style/MySparkViewStyle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphInfo"
        app:spark_scrubEnabled="true" />

    <Button
        android:id="@+id/allGraphButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/all"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGraph" />

    <Button
        android:id="@+id/weeklyGraphButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/weekly"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/allGraphButton"
        app:layout_constraintTop_toBottomOf="@+id/mainGraph" />

    <Button
        android:id="@+id/dailyGraphButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/daily"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/weeklyGraphButton"
        app:layout_constraintTop_toBottomOf="@+id/mainGraph" />

    <Button
        android:id="@+id/wrGraphButton"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/wr_percent"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/srGraphButton"
        app:layout_constraintTop_toBottomOf="@+id/mainGraph" />

    <Button
        android:id="@+id/srGraphButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/sr"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGraph" />

    <TextView
        android:id="@+id/lowMatchWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/play_more_matches_to_display_graph"
        app:layout_constraintBottom_toBottomOf="@+id/mainGraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainGraph" />

    <TextView
        android:id="@+id/totalMatchesTitle"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:text="Total Matches"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/graphInfo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/careerHighTitle"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:text="Career High"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/graphInfo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/healsPerMinTitle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Average Heals/Min"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kdTitle"
        app:layout_constraintTop_toTopOf="@+id/kdTitle" />

    <TextView
        android:id="@+id/kdTitle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Average K/D"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/healsPerMinTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/damagePerMinTitle"
        app:layout_constraintTop_toBottomOf="@+id/avgKD" />

    <TextView
        android:id="@+id/damagePerMinTitle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Average DMG/Min"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/kdTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kdTitle" />

    <TextView
        android:id="@+id/careerHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/careerHighTitle"
        app:layout_constraintEnd_toEndOf="@+id/careerHighTitle"
        app:layout_constraintStart_toStartOf="@+id/careerHighTitle" />

    <TextView
        android:id="@+id/avgHealsperMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/healsPerMinTitle"
        app:layout_constraintEnd_toEndOf="@+id/healsPerMinTitle"
        app:layout_constraintStart_toStartOf="@+id/healsPerMinTitle" />

    <TextView
        android:id="@+id/avgDamagePerMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/damagePerMinTitle"
        app:layout_constraintEnd_toEndOf="@+id/damagePerMinTitle"
        app:layout_constraintStart_toStartOf="@+id/damagePerMinTitle" />

    <TextView
        android:id="@+id/avgKD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/kdTitle"
        app:layout_constraintStart_toStartOf="@+id/kdTitle"
        app:layout_constraintTop_toBottomOf="@+id/dailyGraphButton" />

    <TextView
        android:id="@+id/totalMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/totalMatchesTitle"
        app:layout_constraintEnd_toEndOf="@+id/totalMatchesTitle"
        app:layout_constraintStart_toStartOf="@+id/totalMatchesTitle" />

</android.support.constraint.ConstraintLayout>